--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Java JDK
         uses: actions/setup-java@v4.2.1
         with:
-          java-veersion: 1.8
+          java-version: 1.8
       
       # Run Build Project
       - name: Build gradle project
