--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,25 +10,38 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.2
-      - name: Setup Java JDK
-        uses: actions/setup-java@v4.2.1
+        uses: actions/checkout@v3
+      
+      #Setup Java
+      - name: Set up JDK
+        uses: actions/setup-java@v3
         with:
           java-version: 1.8
-      
-      # Run Build Project
-      - name: Build gradle project
-        run: ./gradlew build
-        
+
+      - name: Cache Gradle packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('build.gradle') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Grant permissions for Gradle
+        run: chmod +x gradlew
+
       # Run Tests Build
       - name: Run gradle tests
         run: ./gradlew test
-
+        
+      # Run Build Project
+      - name: Build gradle project
+        run: ./gradlew assembleDebug
+      
       # Run Tests Build
       - name: Upload APK
-        uses: actions/upload-artifact@v2.1.4
+        uses: actions/upload-artifact@v3
         with:
-          name: app
+          name: app-debug
           path: app/build/outputs/apk/debug/app-debug.apk
         
         
