--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,15 +9,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       
       #Setup Java
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          java-version: 1.8
-          distribution: 'adopt'
+          distribution: 'zulu'
+          java-version: '11'
+          cache: 'gradle'
 
       - name: Cache Gradle packages
         uses: actions/cache@v3
